--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,7 +42,8 @@
     #btnA {
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
-    }
+      
+           }
     
     #btnB {
         font-size: 20px;
@@ -75,3 +76,7 @@
       font-style: italic;
       border-radius: 20px;
     }
+
+      #btnA {
+         background-color: yellow;
+      }
