--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,6 +13,7 @@
         text-align: left;
         position:absolute; top:250px; 
         left:10px; right:10px;
+        
     }
 
     #remain {
@@ -21,6 +22,7 @@
         text-align: center;
         position:absolute; top:310px; 
         left:10px; right:10px;
+        font-weight: bold;
     }
     
     #time {
