--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 /**/
     #minuteStr {
-        color: #ff0000;
+        color: #ffffff;
         font-size: 20px;
         text-align: left;
         position:absolute; top:210px; 
@@ -8,7 +8,7 @@
     }
     
     #secondStr {
-        color: #ff0000;
+        color: #ffffff;
         font-size: 10px;
         text-align: left;
         position:absolute; top:250px; 
@@ -17,7 +17,7 @@
     }
 
     #remain {
-        color: #ff0000;
+        color: #ffffff;
         font-size: 20px;
         text-align: center;
         position:absolute; top:310px; 
@@ -26,7 +26,7 @@
     }
     
     #time {
-        color: #ff0000;
+        color: #ffffff;
         font-size: 20px;
         text-align: center;
         position:absolute; top:340px; 
@@ -45,18 +45,22 @@
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
            background-color: yellow;
-           color: green
+           color: red
       
            }
     
     #btnB {
         font-size: 20px;
         position:absolute; top:380px; left:45%; width:25%; height:60px; 
+         background-color: red;
+           color:yellow 
     }
 
     #btnC {
-        font-size: 10px;
+        font-size: 20px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
+         background-color: blue;
+           color: red
     }
     
     #minute {
@@ -72,7 +76,7 @@
     input[type=number] {text-align: right;}
 
     body{
-      background: skyblue
+      background: black
     }
 
     button{
